--- a/public/css/aio.css
+++ b/public/css/aio.css
@@ -3,12 +3,15 @@ margin: 0;
 padding:0;
 
 }
+#nav-item{
+    display:flex;
 
+}
 #nav-bar {
-    position: sticky;
-    top: 0;
-    z-index: 10;
-    box-shadow: 2px 2px 10px black;
+position: sticky;
+top: 0;
+z-index: 10;
+box-shadow: 2px 2px 10px black;
 }
 .nav-link img{
 height: 40px;
@@ -141,16 +144,33 @@ transition: 300ms;
 }
 
 #accept-sign-up:hover {
-    background-color: White;
-    color: #007bff;
-    box-shadow: inset 0 0 0 3px #007bff;
+background-color: White;
+color: #007bff;
+box-shadow: inset 0 0 0 3px #007bff;
 }
 #brand {
-    font-size: 30px;
-    font-family: 'Odibee Sans', cursive;
-    font-weight: bold;
+position:absolute;
+font-size: 30px;
+left:570px;
+top:0px;
+bottom:5px;
+
+font-family: 'Odibee Sans', cursive;
+font-weight: bold;
 }
 
 #content-filter {
-    width : 100%;
+width : 100%;
+}
+#add-btn {
+background-color: forestgreen;
+color: white;
+cursor: pointer;
+text-shadow: 0.5px 0.5px 1px grey;
+transition: 300ms;
+}
+#add-btn:hover {
+    background-color: white;
+    color: forestgreen;
+    box-shadow: inset 0 0 0 3px forestgreen;
 }
