--- a/public/css/aio.css
+++ b/public/css/aio.css
@@ -1,7 +1,16 @@
 *{
 margin: 0;
-padding:0;
-
+padding: 0;
+}
+.card-group {
+    border: 5px;
+    padding: 10px;
+    margin: 0px;
+}
+.cardd {
+    background-color: #B1BEC3;
+    border: 5px;
+    border-color: red;
 }
 #nav-item{
     display:flex;
